--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=PAMS
 
 spring.datasource.url=jdbc:mysql://localhost:3306/pams
-spring.datasource.username=Aakansha
-spring.datasource.password=#Aakansha123
+spring.datasource.username=root
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
