--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,14 @@ logging.level.org.springframework.security=DEBUG
 logging.pattern.console=%green(%d{HH:mm:ss.SSSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) -%msg%n}
 server.port=8000
 
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=acklevi04@gmail.com
+spring.mail.password=pkjyqdvxuxmemisl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 #logging.level.org.thymeleaf=TRACE
 #logging.level.org.thymeleaf.TemplateEngine=DEBUG
